[gd_scene load_steps=4 format=2]

[ext_resource path="res://Themes/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://Themes/menu_theme.tres" type="Theme" id=2]
[ext_resource path="res://Menus/GameoverMenu.gd" type="Script" id=3]

[node name="GameoverMenu" type="Popup"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0666667, 0.0666667, 0.0666667, 0.92549 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1280, 720 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 222.0
margin_top = 175.0
margin_right = 1698.0
margin_bottom = 905.0
custom_constants/separation = 20

[node name="NoMoreMovesLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 1476.0
margin_bottom = 106.0
size_flags_vertical = 1
theme = ExtResource( 1 )
text = "NO MORE MOVES!"
align = 1

[node name="BetterLuckLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 126.0
margin_right = 1476.0
margin_bottom = 232.0
size_flags_vertical = 1
theme = ExtResource( 1 )
text = "BETTER LUCK NEXT TIME..."
align = 1

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 252.0
margin_right = 1476.0
margin_bottom = 352.0
rect_min_size = Vector2( 0, 100 )

[node name="UndoLastMoveButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 372.0
margin_right = 1476.0
margin_bottom = 478.0
text = "UNDO LAST MOVE"

[node name="NewGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 498.0
margin_right = 1476.0
margin_bottom = 604.0
mouse_default_cursor_shape = 2
text = "NEW GAME"

[node name="MainMenuButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 624.0
margin_right = 1476.0
margin_bottom = 730.0
mouse_default_cursor_shape = 2
text = "MAIN MENU"

[connection signal="pressed" from="CenterContainer/VBoxContainer/UndoLastMoveButton" to="." method="_on_UndoLastMoveButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
